# KFF

./: CMakeLists.txt  LICENSE  Makefile  Makefile.component  README.md
analysis/: CMakeLists.txt  activityFactor.cc  affineAnalysis.cc  affineAnalysis.h  analysis.cc  analysis.h  analysisFactory.cc  analysisFactory.h  barrierCount.cc  branchInfo.cc  branchInfo.h  configure.h  controlDependenceAnalysis.cc  controlDependenceAnalysis.h  controlTree.cc  controlTree.h  convergentRegionAnalysis.cc  convergentRegionAnalysis.h  cycleAnalysis.cc  cycleAnalysis.h  dataDependenceAnalysis.cc  dataDependenceAnalysis.h  dataflowGraph.cc  dataflowGraph.h  defaultProgramStructure.h  dependenceAnalysis.cc  dependenceAnalysis.h  directionalGraph.cc  directionalGraph.h  divergenceAnalysis.cc  divergenceAnalysis.h  divergenceGraph.cc  divergenceGraph.h  dominatorTree.cc  dominatorTree.h  hammockGraphAnalysis.cc  hammockGraphAnalysis.h  loopAnalysis.cc  loopAnalysis.h  memoryDependenceAnalysis.cc  (+18 more)
cmake/modules/: FindCUDA.cmake
device/: CMakeLists.txt  cudaDriver.cc  cudaDriver.h  cudaDriverApi.cc  cudaDriverFrontend.cc  cudaDriverFrontend.h  cudaDriverInterface.cc  cudaDriverInterface.h  cudaFatBinary.h  cudaRuntime.cc  cudaRuntime.h  cudaRuntimeContext.h  cudaRuntimeInterface.cc  cudaRuntimeInterface.h  cudaWorkerThread.cc  cudaWorkerThread.h  cuda_runtime.cc  cuda_runtime.h  extractedDeviceState.cc  extractedDeviceState.h  fatBinaryContext.cc  fatBinaryContext.h  traceGeneratingCudaRuntime.h
examples/: CMakeLists.txt
examples/applications/BCALM1.0/CUDA_code/: ConstantMemoryInit.h  (+6 more)
examples/bcalm1.0/CUDA_code/: ArrayHandling.cu  CreatePovRay.cu  DebugOutput.h  Makefile  PrintLog.cpp  bitoperations.cu  cpml_help.cu  fdtd.cu  grid.cu  kernel.cu  kernel_help.cu  lorentz_help.cu  populate.cu  povray_help.cu  tools.h  transfer.cu
examples/bcalm1.0/Doc/: Documentation.lyx~
examples/fluam5.4/: README
examples/fluam5.4/src/: JPS.cu  allocateErrorArray.cu  boundary.h  boundaryParticlesFunction.cu  boundaryParticlesFunctionCompressibleParticles.cu  boundaryParticlesFunctionIncompressible.cu  boundaryParticlesFunctionMomentumCoupling.cu  boundaryParticlesFunctionStokesLimit.cu  calculateAdvectionFluid.cu  calculateVelocityAtHalfTimeStepCompressibleParticles.cu  cells.h  checkVelocity.cu  configurationSaveFunctions.cu  copyToGPUBinaryMixtureWall.cu  createBoundaries.cpp  createBoundaries4ptGPU.cu  createBoundariesGPU.cu  createBoundariesRK2GPU.cu  createCellsBinaryMixtureGPU.cu  createCellsGhost.cpp  createCellsGhostGPU.cu  createCellsIncompressibleBinaryMixture.cu  createCellsIncompressibleGPU.cu  createCellsSemiImplicitCompressibleParticlesGPU.cu  createCellsStokesLimitGPU.cu  createParticlesGPU.cu  cudaDevice.cu  deltaGPU.cu  diffusionBM.cu  errorBarsS3d.cpp  firstStepQuasiNeutrallyBuoyant.cu  firstStepQuasiNeutrallyBuoyant4pt2D.cu  fluid.h  forceBondedGPU.cu  forceBoundaryGPU.cu  forceIncompressibleBoundaryGPU.cu  freeBinaryMixtureGPU.cu  freeBondedForcesGPU.cu  freeBoundariesGPU.cu  freeBoundariesRK2GPU.cu  (+94 more)
examples/fluam5.4/tools/: getParticle.cpp
examples/logga/: input.3decOverlap.31  input.3decOverlap.61  input.3deceptive.30  input.3deceptive.60  input.bipolar.30  input.bipolar.60  input.onemax.30  input.onemax.60  input.quadratic.30  input.quadratic.60  output.3decOverlap.61.fitness  output.3decOverlap.61.model
logga/: CMakeLists.txt  COPYRIGHT  ToDo.cpp  arch.h  args.cc  args.h  binary.h  chromosome.cc  chromosome.h  dataarray.h  fitness.cc  fitness.h  getFileArgs.cc  getFileArgs.h  gga.cc  gga.h  graph.cc  graph.h  group.cc  group.h  header.cc  header.h  help.cc  help.h  kernelanchor.h  llist.cc  llist.h  main.cc  memalloc.h  mymath.cc  mymath.h  newkernel.h  operator.cc  operator.h  originalkernel.h  population.cc  population.h  random.cc  random.h  replace.cc  (+12 more)
metadataGatherer/: CMakeLists.txt  activeTimer.cc  activeTimer.h  activityFactorGenerator.cc  activityFactorGenerator.h  archive.h  argumentParser.cc  argumentParser.h  bTree.h  basicBlockCountGenerator.cc  basicBlockCountGenerator.h  branchTraceAnalyzer.cc  branchTraceAnalyzer.h  branchTraceGenerator.cc  branchTraceGenerator.h  cacheSimulator.cc  cacheSimulator.h  casts.h  common.h  compression.cc  compression.h  configurable.cc  configurable.h  controlFlowVisualizer.cc  controlFlowVisualizer.h  convergenceGenerator.cc  convergenceGenerator.h  debug.cc  debug.h  exception.cc  exception.h  floatingPoint.cc  floatingPoint.h  instructionTraceAnalyzer.cc  instructionTraceAnalyzer.h  instructionTraceGenerator.cc  instructionTraceGenerator.h  iterator.h  json.cc  json.h  (+60 more)
translator/: CMakeLists.txt  ast.cc  ast.h  attribute.cc  attribute.h  aux.cc  aux.h  ccuda.cc  ccuda.h  common.cc  common.h  config.cc  config.h  kernel.cc  kernel.h  optimizations.cc  optimizations.h  range.cc  range.h  reference.cc  reference.h  stencil.cc  stencil.h  translator.cc  translator.h
(+288 files in other folders)
